--- a/WebForms3/packages.config
+++ b/WebForms3/packages.config
@@ -4,6 +4,8 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="elmah" version="1.2.2" targetFramework="net452" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
