--- a/WebForms3/Web.config
+++ b/WebForms3/Web.config
@@ -13,6 +13,17 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup></configSections>
+  <system.net>
+    <mailSettings>
+      <smtp from ="ivanginovdev@gmail.com">
+        <network host="smtp.gmail.com"
+                 port="587"
+                 userName="ivanginovdev@gmail.com"
+                 password="Raynor1!"
+                 enableSsl="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebForms3-20190114091518.mdf;Initial Catalog=aspnet-WebForms3-20190114091518;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
