--- a/WebForms3/WebForms3.csproj
+++ b/WebForms3/WebForms3.csproj
@@ -509,6 +509,7 @@
     </Compile>
     <Compile Include="Logic\AddProducts.cs" />
     <Compile Include="Logic\ExceptionUtility.cs" />
+    <Compile Include="Logic\GmailService.cs" />
     <Compile Include="Logic\PayPalFunctions.cs" />
     <Compile Include="Logic\RoleActions.cs" />
     <Compile Include="Logic\ShoppingCartActions.cs" />
